# ybkk

./: .editorconfig  .gates-state.json  .gitignore  AGENTS.md  README.md  daemon.json  deploy-ecs.sh  package.json  pwd.txt  ssh-run-b64.ps1  ssh-run.ps1  tsconfig.base.json  turbo.json
apps/api/: Dockerfile  __init__.py  alembic.ini  package.json  pyproject.toml
apps/api/src/: __init__.py  audit_util.py  auth.py  config.py  errors.py  llm_client.py  main.py  metrics.py  models.py  secret.py  setup_default_admin.py
apps/api/src/api/: __init__.py
apps/api/src/api/v1/: __init__.py  audits.py  auth.py  datasources.py  flow_runs.py  flows.py  health.py  ingest.py  internal.py  llm.py  metrics.py  ontology.py  orgs.py  scenarios.py
apps/api/src/connectors/: __init__.py  base.py  factory.py  mysql.py  oracle.py  postgres.py  sqlserver.py
apps/api/src/db/: __init__.py  session.py
apps/api/src/db/migrations/: env.py
apps/api/src/db/migrations/versions/: 0001_init.py  0002_audit_triggers.py  0003_v1_core.py  0004_v2_ingest.py  0005_v3_tenancy.py
apps/api/src/middleware/: __init__.py  auth.py  error_handler.py  rbac.py  request_id.py  tenancy.py
apps/api/src/repositories/: __init__.py  datasource_repo.py
apps/api/src/services/: __init__.py  datasource_service.py
apps/api/tests/: test_jwt_v4.py  test_rbac.py
apps/api/tests/unit/: __init__.py  test_config.py  test_connectors.py  test_datasource_service.py  test_errors.py  test_secret.py
apps/flow_engine/: Dockerfile  pyproject.toml
apps/flow_engine/src/aios_flow/: __init__.py  config.py  llm_client.py  main.py  metrics.py  worker.py
apps/flow_engine/src/aios_flow/activities/: __init__.py  llm_judge.py  steps.py
apps/flow_engine/src/aios_flow/triggers/: __init__.py  schedule.py
apps/flow_engine/src/aios_flow/workflows/: __init__.py  generic.py
apps/flow_engine/tests/: __init__.py  test_llm_judge.py  test_steps.py
apps/ingest/: Dockerfile  pyproject.toml
apps/ingest/src/aios_ingest/: __init__.py  config.py  main.py  metrics.py
apps/ingest/src/aios_ingest/parser/: __init__.py  excel.py  markdown.py  meeting.py  pdf.py
apps/ingest/tests/: __init__.py  test_parsers.py
apps/ollama/: Dockerfile  entrypoint.sh
apps/ontology/: Dockerfile  pyproject.toml
apps/ontology/src/aios_ontology/: __init__.py  config.py  llm_client.py  main.py  metrics.py  schema.py
apps/ontology/src/aios_ontology/extractor/: __init__.py
apps/ontology/src/aios_ontology/mapping/: __init__.py
apps/ontology/tests/: __init__.py  test_mapping.py  test_schema.py
apps/web/: Dockerfile  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/web/e2e/: 01-login.spec.ts  02-datasource.spec.ts  03-scenarios.spec.ts  04-audits.spec.ts  05-flows.spec.ts  06-ingest-excel.spec.ts  07-ingest-pdf.spec.ts  08-ontology-browse.spec.ts  09-llm-usage.spec.ts  10-scenario-llm.spec.ts  11-org-switch.spec.ts  12-rbac.spec.ts  13-monitoring.spec.ts  14-llm-system-role.spec.ts  15-ollama-pull.spec.ts
coding_group/: 00-30min-kickoff.md  01-overview.md  02-tooling-checklist.md  03-repository-bootstrap.md  04-agents.md  05-skills.md  06-workflow.md  07-scripts.md  08-mcp.md  09-runbook.md  10-evolve.md  AGENTS.md  README.md
coding_group/assets/prompts/: agent-design.md  agent-develop.md  agent-requirements.md  agent-reviewer.md  orchestrator.md
coding_group/assets/scripts/: gate-baseline.ps1  gate-baseline.sh  gate-coverage.ps1  gate-coverage.sh  gate-deploy-test.ps1  gate-deploy-test.sh  gate-e2e.ps1  gate-e2e.sh  gate-lint.ps1  gate-lint.sh  gate.ps1
coding_group/kb/: AGENTS.md  changelog.md  tooling.md
deploy/compose/: .env.example  backup.sh  docker-compose.yml  install.sh  upgrade.sh
scripts/: v2_verify_runner.py
(+102 files in other folders)
