[project]
name = "aios-flow-engine"
version = "0.2.0"
description = "元冰可可 AIOS flow_engine - Temporal worker + 场景编排"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.0",
  "pydantic-settings==2.5.0",
  "temporalio==1.8.0",
  "httpx==0.27.0",
  "apscheduler==3.10.4",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.0",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
