[project]
name = "aios-ingest"
version = "0.2.0"
description = "元冰可可 AIOS - 多源数据接入（Excel/PDF/会议/Markdown）"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-multipart==0.0.20",
  "pydantic==2.9.0",
  "pydantic-settings==2.5.0",
  "openpyxl==3.1.5",
  "pypdf==5.0.0",
  "markdown-it-py==3.0.0",
  "redis==5.2.0",
  "minio==7.2.8",
  "httpx==0.27.2",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.0", "pytest-asyncio==0.24.0", "pytest-cov==5.0.0", "ruff==0.6.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
